NetworkX 2.1 related updates
NetworkX 2.1 related updates
Update broken links in M4NB2

--- a/module_4/M4_NB2_PeerNetworkAnalysis.ipynb
+++ b/module_4/M4_NB2_PeerNetworkAnalysis.ipynb
@@ -285,9 +285,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an unweighted undirected graph using the NetworkX's from_pandas_dataframe method.\n",
+    "# Create an unweighted undirected graph using the NetworkX's from_pandas_edgelist method.\n",
     "# The column participantID.A is used as the source and participantID.B as the target.\n",
-    "G = nx.from_pandas_dataframe(interactions, \n",
+    "G = nx.from_pandas_edgelist(interactions, \n",
     "                             source='participantID.A', \n",
     "                             target='participantID.B', \n",
     "                             create_using=nx.Graph())"
@@ -395,8 +395,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nx.to_pandas_edgelist?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create a directed graph with an edge_attribute labeled counts.\n",
-    "g = nx.from_pandas_dataframe(grp_interactions, \n",
+    "g = nx.from_pandas_edgelist(grp_interactions, \n",
     "                             source='participantID.A', \n",
     "                             target='participantID.B', \n",
     "                             edge_attr='counts', \n",
@@ -541,12 +550,12 @@
     "### 1.3 Graph visualization\n",
     "The next step is to visualize the graph object – a topic that you briefly touched on in Notebook 1. NetworkX is not primarily a graph drawing package, but provides basic drawing capabilities using Matplotlib. More advanced graph visualization packages can be used. However, these are outside of the scope of this course.\n",
     "\n",
-    "[NetworkX documentation](https://networkx.github.io/documentation/networkx-1.10/reference/drawing.html) (2015) states:\n",
+    "[NetworkX documentation](https://networkx.github.io/documentation/stable/reference/introduction.html#drawing) (2015) states:\n",
     "> Proper graph visualization is hard, and we highly recommend that people visualize their graphs with tools dedicated to that task. Notable examples of dedicated and fully-featured graph visualization tools are Cytoscape, Gephi, Graphviz and, for LaTeX typesetting, PGF/TikZ.\n",
     "\n",
     "A graph is an abstract mathematical object without a specific representation in the Cartesian coordinate space, and graph visualization is therefore not a well-defined problem with a unique solution. Depending on which structures in the graph object are of interest, several layout algorithms exist that can be used to optimize node positioning for display visualization. Whenever you want to visualize a graph, you have to find mapping from vertices to Cartesian coordinates first, preferably in a way that is aesthetically pleasing. A separate branch of graph theory, namely graph drawing, attempts to solve this problem via several graph layout algorithms.\n",
     "\n",
-    "You will use the interface provided by [Graphviz](http://graphviz.org/Home.php) for node positioning in most of your visualization in this course, because considering other possibilities may distract from the core objectives. Two node positioning algorithms can be accessed using the Graphviz interface provided by NetworkX. They are the following:\n",
+    "You will use the interface provided by [Graphviz](http://graphviz.org/) for node positioning in most of your visualization in this course, because considering other possibilities may distract from the core objectives. Two node positioning algorithms can be accessed using the Graphviz interface provided by NetworkX. They are the following:\n",
     "-  **dot**: \"hierarchical\" or layered drawings of directed graphs. This is the default to use if edges have directionality. The dot algorithm produces a ranked layout of a graph honoring edge directions. It is particularly appropriate for displaying hierarchies or directed acyclic graphs.\n",
     "- **neato**: \"spring model\" layouts.  This is the default to use if the graph is not too large (about 100 nodes), and you don't know anything else about it. Neato attempts to minimize a global energy function, which is equivalent to statistical multidimensional scaling. An ideal spring is placed between every pair of nodes, such that its length is set to the shortest path distance between the endpoints. The springs push the nodes so their geometric distance in the layout approximates their path distance in the graph.\n",
     "\n",
@@ -973,9 +982,7 @@
    "source": [
     "# Arrange participants according to closeness centrality measure, in descending order. \n",
     "# Return the result as a tuple, i.e. (participant_id, cl_centrality).\n",
-    "# t_call_clo_centrality_sorted = sorted(call_closeness_centrality.iteritems(), key=lambda (k,v) : (-v,k))\n",
     "t_call_clo_centrality_sorted = sorted(call_closeness_centrality.items(), key=lambda kv: kv[1], reverse=True)\n",
-    "\n",
     "\n",
     "# Convert tuple to pandas dataframe.\n",
     "df_call_clo_centrality_sorted = pd.DataFrame([[x,y] for (x,y) in t_call_clo_centrality_sorted], \n",
@@ -1029,8 +1036,6 @@
     "# Arrange participants according to betweenness centrality measure, in descending order. \n",
     "# Return the result as a tuple, i.e. (participant_id, btn_centrality). \n",
     "t_call_btn_centrality_sorted = sorted(call_betweenness_centrality.items(), key=lambda kv: kv[1], reverse=True)\n",
-    "#t_call_deg_centrality_sorted = sorted(call_degree_centrality.items(), key=lambda kv: kv[1], reverse=True)\n",
-    "\n",
     "\n",
     "# Convert tuple to a Pandas DataFrame.\n",
     "df_call_btn_centrality_sorted = pd.DataFrame([[x,y] for (x,y) in t_call_btn_centrality_sorted], \n",
@@ -1760,7 +1765,7 @@
    "source": [
     "# Create the adjacency matrix for call records using NetworkX and Pandas functions.\n",
     "nodes = list(G.nodes())\n",
-    "call_adjmatrix = nx.to_pandas_dataframe(G,nodelist=nodes)\n",
+    "call_adjmatrix = nx.to_pandas_adjacency(G,nodelist=nodes)\n",
     "call_adjmatrix.to_csv('./call.adjmatrix')"
    ]
   },
@@ -1797,13 +1802,6 @@
     "- Download a copy of the notebook in \".ipynb\" format to your local machine using \"File\", \"Download as\", and \"IPython Notebook (.ipynb)\"; and\n",
     "- Submit a copy of this file to the Online Campus."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1823,7 +1821,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
