--- a/module_4/M4_NB3_NetworkClustering.ipynb
+++ b/module_4/M4_NB3_NetworkClustering.ipynb
@@ -138,7 +138,6 @@
     "plt.figure(figsize=(10,10))\n",
     "plt.axis('off')\n",
     "\n",
-    "#pos = nx.spring_layout(call_graph)\n",
     "pos = graphviz_layout(call_graph, prog='dot')\n",
     "nx.draw_networkx(call_graph, pos=pos, node_color='#11DD11', with_labels=False)\n",
     "_ = plt.axis('off')"
@@ -170,7 +169,7 @@
     "    \"\"\" \n",
     "    \n",
     "    path_length=nx.all_pairs_shortest_path_length(G)\n",
-    "    distances=np.zeros((G.size(),G.size()))\n",
+    "    distances=np.zeros((G.order(),G.order())) \n",
     "    \n",
     "    for u,p in dict(path_length).items():\n",
     "        for v,d in p.items():\n",
@@ -203,7 +202,6 @@
     "    i = 0\n",
     "    for i in range(len(hc_out)):\n",
     "        cluster_membership[i]=hc_out[i]\n",
-    "    \n",
     "    \n",
     "    return cluster_membership"
    ]
@@ -256,12 +254,12 @@
    "outputs": [],
    "source": [
     "plt.title('Hierarchical Clustering Dendrogram (pruned)')\n",
-    "plt.xlabel('sample index')\n",
+    "plt.xlabel('sample index (or leaf size)')\n",
     "plt.ylabel('distance')\n",
     "hierarchy.dendrogram(\n",
     "    Z,\n",
     "    truncate_mode='lastp',  # show only the last p merged clusters\n",
-    "    p=10,  # show only the last p merged clusters\n",
+    "    p=10,                   # show only the last p merged clusters\n",
     "    show_leaf_counts=True,  # numbers in brackets are counts for each leaf\n",
     "    leaf_rotation=90,\n",
     "    leaf_font_size=12)\n",
@@ -294,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, identification of an appropriate cluster is ideally done manually as this has the advantages of gaining some insights into your data as well as providing an opportunity to [perform sanity checks](https://joernhees.de/blog/2015/08/26/scipy-hierarchical-clustering-and-dendrogram-tutorial). To select the cluster size, look for a large shift in the distance metric. In our example with dendrograms plots shown above, say a case has been made for an ideal cutoff of 0.3. The number of clusters is then simply the number of intersections of a horizontal line (with height of 0.3) with the vertical lines of the dendrogram. Therefore, 9 clusters would be obtained in this case as shown below."
+    "Here, identification of an appropriate cluster is ideally done manually as this has the advantages of gaining some insights into your data as well as providing an opportunity to [perform sanity checks](https://joernhees.de/blog/2015/08/26/scipy-hierarchical-clustering-and-dendrogram-tutorial). To select the cluster size, look for a large shift in the distance metric. In our example with dendrograms plots shown above, say a case has been made for an ideal cutoff of 3.5. The number of clusters is then simply the number of intersections of a horizontal line (with height of 3.5) with the vertical lines of the dendrogram. Therefore, 3 clusters would be obtained in this case as shown below."
    ]
   },
   {
@@ -304,10 +302,10 @@
    "outputs": [],
    "source": [
     "fancy_dendrogram( Z, truncate_mode='lastp', p=12, leaf_rotation=90.,\n",
-    "    leaf_font_size=12.,\n",
+    "    leaf_font_size=12.0,\n",
     "    show_contracted=False,\n",
     "    annotate_above=10,\n",
-    "    max_d=0.3)\n",
+    "    max_d=3.5)\n",
     "plt.show()"
    ]
   },
@@ -317,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt_clust = 9\n",
+    "opt_clust = 3\n",
     "opt_clust"
    ]
   },
@@ -351,10 +349,17 @@
    "outputs": [],
    "source": [
     "clust = list(set(cluster_assignments.values()))\n",
-    "clust\n",
-    "\n",
+    "clust"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cluster_centers = sorted(set(cluster_assignments.values()))\n",
-    "freq = [list(cluster_assignments.values()).count(x) for x in cluster_centers]\n"
+    "freq = [list(cluster_assignments.values()).count(x) for x in cluster_centers]"
    ]
   },
   {
@@ -379,7 +384,7 @@
     "\n",
     "### Instructions\n",
     "\n",
-    "> 1. How many clusters are obtained after the final step of agglomerative clustering (before post-processing)?\n",
+    "> 1. How many clusters are obtained after the final step of a generic agglomerative clustering algorithm (before post-processing)?\n",
     ">> **Note:** Post-processing involves determining the optimal clusters for the problem at hand.\n",
     "> 2. Based on your answer above, would you consider agglomerative clustering a top-down approach, or a bottom-up approach?\n",
     "> 3. Which of the three linkage functions (i.e. single, average, or maximum or complete) do you think is likely to be most sensitive to outliers? \n",
@@ -603,20 +608,6 @@
     "- Download a copy of the notebook in \".ipynb\" format to your local machine using \"File\", \"Download as\", and \"IPython Notebook (.ipynb)\"; and\n",
     "- Submit a copy of this file to the Online Campus."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -636,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
