M2NB3 update question 1.

--- a/module_2/M2_NB3_CollectYourOwnData.ipynb
+++ b/module_2/M2_NB3_CollectYourOwnData.ipynb
@@ -235,40 +235,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "U = bc.read_csv(\"data/metadata_sample\", \"\")"
+    "# Load the input file.\n",
+    "U = bc.read_csv(\"data/metadata_sample\", \"\")\n",
+    "\n",
+    "# Export the visualization to a new directory, \"viz\".\n",
+    "bc.visualization.export(U, \"viz\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.5.2 Export the visualization to disk and embed in this notebook\n",
+    "#### 1.5.2 Display the visualization in this notebook\n",
     "In order to avoid having to open additional ports on your virtual analysis environment, and potentially on your local network, we can export the visualization to disk and embed it directly in this notebook.\n",
     "\n",
     "Screenshot supplied of sample file.\n",
-    "![Bandicoot visualization](bc_visualization_screenshot.png \"Screenshot of Bandicoot visualization.\")\n",
-    "\n",
-    "You can execute the code cells below to visualize the input file selected in Section 1.5.1."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Export the visualization to a new directory, \"viz\".\n",
-    "bc.visualization.export(U, \"viz\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Display the exported visualization in a frame within this notebook\n",
-    "IFrame(\"viz/index.html\", \"100%\", 700)"
+    "![Bandicoot visualization](bc_visualization_screenshot.png \"Screenshot of Bandicoot visualization.\")\n"
    ]
   },
   {
@@ -281,27 +263,27 @@
     "</div>\n",
     "\n",
     "**Note:**\n",
-    "> Please use the supplied dataset to complete the exercise rather than your own data. \n",
+    "> Please note that this question have been changed and is not covered in the supplied video overview. The original question have been removed.\n",
     "\n",
-    "1. Using the exported visualization, identify a correspondent id with whom the user had five interactions with for the given time range. You will need to hover over the Ego network shown, and take a screenshot. Embed the image as your solution to this part of the exercise.\n",
-    "> **Important**: Use the following template to embed the image. This allows the image to be retained in the shared notebook.\n",
-    ">\n",
-    "`from IPython.display import Image\n",
-    "Image(filename=\"yourImageFilename.ext\")`\n",
-    "2. What is the recorded number of interactions observed in Week 03/07 to 09/07? You can obtain this value by changing the view in visualization from \"by week\" to \"all time range\".\n",
-    "3. Of the incoming interactions across the entire time range, what percentage of these were text? Show your calculation using values from the exported visualization."
+    "Application and domain specific libraries are used to accelerate development and take care of repetitive tasks. List three points that you think are important to consider when using libraries such as Pandas, FunF, Bandicoot, or any other library. The points raised can be advantages, disadvantages or observations and the description should be limited to one sentence per point addressed."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#  Your answer here."
+    "Your markdown answer here."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -389,9 +371,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -403,9 +385,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
