--- a/module_3/M3_NB2_NoiseVsBias.ipynb
+++ b/module_3/M3_NB2_NoiseVsBias.ipynb
@@ -321,7 +321,7 @@
    "metadata": {},
    "source": [
     "#### 1.3.2 Plot the map of observations, using one of the functions created earlier\n",
-    "In the plot below, the red corresponds to inside locations, while the blue dots corresponds to outside locations."
+    "In the plot below, the red corresponds to outside locations, while the blue dots corresponds to inside locations."
    ]
   },
   {
@@ -388,9 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "<br>\n",
     "<div class=\"alert alert-info\">\n",
@@ -407,9 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "Your markdown answer."
    ]
@@ -623,7 +619,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -637,9 +633,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
