--- a/module_3/M3_NB3_GeotaggingWiFiAP.ipynb
+++ b/module_3/M3_NB3_GeotaggingWiFiAP.ipynb
@@ -207,7 +207,7 @@
    "outputs": [],
    "source": [
     "# Plot histogram of accuracy observations.\n",
-    "u00_loc.accuracy.hist(cumulative=True, normed=1, histtype='step', bins=100)"
+    "u00_loc.accuracy.hist(cumulative=True, density=1, histtype='step', bins=100)"
    ]
   },
   {
@@ -859,9 +859,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "Your markdown answer here."
    ]
@@ -1001,7 +999,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1015,9 +1013,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
