Update image filename

--- a/module_5/M5_NB1_BandicootIntroduction.ipynb
+++ b/module_5/M5_NB1_BandicootIntroduction.ipynb
@@ -675,7 +675,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"M5NB1_img.png\" alt=\"Bandicoot output screenshot\" style=\"width: 500px;\"/>"
+    "<img src=\"M5NB1_Img.png\" alt=\"Bandicoot output screenshot\" style=\"width: 500px;\"/>"
    ]
   },
   {
