Update links for Continuum

--- a/module_0/M0_NB1_GettingStarted.ipynb
+++ b/module_0/M0_NB1_GettingStarted.ipynb
@@ -99,9 +99,9 @@
     "\n",
     "> Those interested in setting up local or alternative cloud installations for use outside of this course can refer to the following links:\n",
     "\n",
-    "> - **Local installation**: Instructions on [Continuum Analytics's Anaconda download](https://www.continuum.io/downloads) page.\n",
+    "> - **Local installation**: Instructions on [Continuum Analytics's Anaconda download](https://www.anaconda.com/download/) page.\n",
     "\n",
-    "> - **Cloud setup**: Instructions on [Continuum Analytics's AWS instructions](https://docs.continuum.io/anaconda/amazon-aws) page."
+    "> - **Cloud setup**: Instructions on [Continuum Analytics's AWS instructions](http://docs.anaconda.com/anaconda-cluster/quickstart/?highlight=aws) page."
    ]
   },
   {
@@ -499,7 +499,7 @@
    "metadata": {},
    "source": [
     "# 3. Additional resources\n",
-    "As part of their explanation of [Open data science](https://www.continuum.io/open-data-science), Continuum Analytics states that:\n",
+    "As part of their explanation of Open data science, Continuum Analytics states that:\n",
     "\n",
     "> Open data science is not a single technology, but a revolution within the data science community. Open Data Science is an inclusive movement that makes open source tools for data science - data, analytics and computation - easily work together as a connected ecosystem.\n",
     "\n",
@@ -511,7 +511,9 @@
     "\n",
     "> [Python for beginners](https://www.python.org/about/gettingstarted/)\n",
     "\n",
-    "> [Code Academy: Learn to program Python](https://www.codecademy.com/learn/python)\n"
+    "> [Code Academy: Learn to program Python](https://www.codecademy.com/learn/python)\n",
+    "\n",
+    "> [Open Data Science is a team sport](https://www.anaconda.com/blog/company-blog/open-data-science-team-sport/)"
    ]
   },
   {
@@ -538,7 +540,7 @@
    "metadata": {},
    "source": [
     "# 5. References\n",
-    "Continuum Analytics. 2016. “Open Data Science | Continuum.” Accessed September 9. https://www.continuum.io/open-data-science. "
+    "Continuum Analytics. 2016. “Open Data Science | Continuum.” Accessed September 9. https://www.slideshare.net/continuumio/why-open-data-science-matters-gartner-bi-analytics-summit-16"
    ]
   },
   {
@@ -566,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
