--- a/module_1/M1_NB1_PythonIntro.ipynb
+++ b/module_1/M1_NB1_PythonIntro.ipynb
@@ -1450,9 +1450,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 3.1.1 Simple plot\n",
     "The graph below does not contain any real significance other than demonstrating how easy it is to plot graphs. "
@@ -1707,9 +1705,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 4. Submit your notebook\n",
     "\n",
@@ -1721,9 +1717,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 5. Additional resources\n",
     "\n",
@@ -1731,7 +1725,7 @@
     "\n",
     "> This resource is optional and is only included for students who wish to complete additional exercises in Python.\n",
     "\n",
-    "- Additional [Python course](http://www.python-course.eu/course.php).\n",
+    "- Additional [Python course](https://www.python-course.eu/python3_course.php).\n",
     "- [Python tips for beginners](http://www.techbeamers.com/top-10-python-coding-tips-for-beginners/)\n",
     "- [30 essential Python tips and tricks](http://www.techbeamers.com/essential-python-tips-tricks-programmers/)\n",
     "\n",
@@ -1740,9 +1734,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 6. References\n",
     "Python Software Foundation. 2016. “General Python FAQ - Python 3.6.2 documentation.”Last accessed August 20, 2017. https://docs.python.org/3/faq/general.html#what-is-python. \n",
@@ -1754,7 +1746,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1768,9 +1760,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
