--- a/module_1/M1_NB2_DataAnalysisBasics.ipynb
+++ b/module_1/M1_NB2_DataAnalysisBasics.ipynb
@@ -9,9 +9,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Data analysis basics"
    ]
@@ -847,9 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "If we are interested in the average accuracy for each of the groups, we can do the following:"
    ]
@@ -867,9 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "source": [
     "The Pandas [groupby()](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.groupby.html) method also accepts a list of fields as an argument. The syntax is ``DataFrame.groupby(['field 1', 'field 2'])``."
    ]
@@ -950,7 +944,7 @@
    "source": [
     "Sometimes you are provided with data that needs to be transformed into a form that is more familiar, so that you can do other analyses, or search for patterns or other insights. DataFrames in Pandas are equipped with an \"```apply```\" method that can help with such transformation. These transformations may require the use of other functions. For example, the time field in your GPS data is in a form called Unix time (also known as POSIX time or Epoch time), which is a system for describing instants in time, defined as the number of seconds that have elapsed since 00:00:00 Coordinated Universal Time (UTC), Thursday, 1 January 1970, not counting leap seconds. Unix time is a single signed integer number that increments every second, without requiring the calculations to determine year, month, day of month, hour, and minute, necessary for intelligibility to humans.\n",
     "\n",
-    "The Pandas “to_datetime” method will be used to convert the time into something that makes sense to you, by introducing another Python style construct called “**lambda**” functions inside an apply method. Python supports the creation of [anonymous functions](http://www.diveintopython.net/power_of_introspection/lambda_functions.html) (i.e., functions that are not bound to a name) at runtime, using a construct called \"lambda\". While using lambda expressions is never a necessity, they allow you to perform quick hacks without having to bloat your code base with too many rarely-used functions. Let’s now demonstrate using the apply method."
+    "The Pandas “to_datetime” method will be used to convert the time into something that makes sense to you, by introducing another Python style construct called “**lambda**” functions inside an apply method. Python supports the creation of anonymous, [lambda functions](http://gsl.mit.edu/media/programs/south-africa-summer-2015/materials/diveintopython.pdf) (i.e., functions that are not bound to a name), at runtime, using a construct called \"lambda\". While using lambda expressions is never a necessity, they allow you to perform quick hacks without having to bloat your code base with too many rarely-used functions. Let’s now demonstrate using the apply method."
    ]
   },
   {
@@ -1018,9 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "<br>\n",
     "<div class=\"alert alert-info\">\n",
@@ -1294,9 +1286,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 5. Submit your notebook\n",
     "\n",
@@ -1308,9 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 6. Additional Resources\n",
     "\n",
@@ -1322,9 +1310,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1336,9 +1324,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
