--- a/module_1/M1_NB3_VisualCommunication.ipynb
+++ b/module_1/M1_NB3_VisualCommunication.ipynb
@@ -515,9 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "<br>\n",
     "<div class=\"alert alert-info\">\n",
@@ -594,9 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "<br>\n",
     "<div class=\"alert alert-info\">\n",
@@ -622,7 +618,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -636,9 +632,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
