--- a/module_2/M2_NB1_SourcesOfData.ipynb
+++ b/module_2/M2_NB1_SourcesOfData.ipynb
@@ -133,7 +133,6 @@
     "\n",
     "This example makes use of the [pandas-datareader](https://pandas-datareader.readthedocs.io/en/latest/) module, which supports remote data access. This library has support for extracting data from various internet sources into a Pandas DataFrame. Currently, the supported sources are:\n",
     "\n",
-    "- Yahoo! Finance\n",
     "- Google Finance\n",
     "- Enigma\n",
     "- Quandl\n",
@@ -294,9 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "Now merge your dataset with the World Bank data."
    ]
@@ -560,9 +557,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -574,9 +571,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
