update M_xtab range

--- a/module_1/M1_NB1_PythonIntro.ipynb
+++ b/module_1/M1_NB1_PythonIntro.ipynb
@@ -1624,8 +1624,8 @@
    "outputs": [],
    "source": [
     "# Cross tabulation for frequency of occurence of values.\n",
-    "M_xtab = [0 for i in range(0, ntrials)]\n",
-    "for i in range(0,ntrials):\n",
+    "M_xtab = [0 for i in range(0, ntrials+1)]\n",
+    "for i in range(0,ntrials+1):\n",
     "    M_xtab[i] = sum([x == i for x in M])"
    ]
   },
