--- a/module_3/M3_NB3_GeotaggingWiFiAP.ipynb
+++ b/module_3/M3_NB3_GeotaggingWiFiAP.ipynb
@@ -19,7 +19,10 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-warning\">\n",
-    "**This notebook contains advanced exercises that are only applicable to students who wish to deepen their understanding and qualify for bonus marks on this course.** You will be able to achieve 100% for this notebook by successfully completing exercise 1. An optional, additional exercise can be completed to qualify for bonus marks.\n",
+    "\n",
+    "**This notebook contains advanced exercises that are only applicable to students who wish to deepen their understanding and qualify for bonus marks on this course.** \n",
+    "    \n",
+    "You will be able to achieve 100% for this notebook by successfully completing exercise 1. An optional, additional exercise can be completed to qualify for bonus marks.\n",
     "</div>"
    ]
   },
@@ -879,8 +882,10 @@
    "source": [
     "<br>\n",
     "<div class=\"alert alert-info\">\n",
+    "    \n",
     "<b>Exercise 1 End.</b>\n",
     "</div>\n",
+    "\n",
     "> **Exercise complete**:\n",
     "    \n",
     "> This is a good time to \"Save and Checkpoint\"."
@@ -956,9 +961,12 @@
    "metadata": {},
    "source": [
     "<br>\n",
+    "\n",
     "<div class=\"alert alert-info\">\n",
+    "\n",
     "<b>Exercise 2 [Advanced] End.</b>\n",
     "</div>\n",
+    "\n",
     "> **Exercise complete**:\n",
     "    \n",
     "> This is a good time to \"Save and Checkpoint\".\n",
@@ -1013,7 +1021,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
