--- a/module_3/M3_NB1_BSSID.ipynb
+++ b/module_3/M3_NB1_BSSID.ipynb
@@ -19,7 +19,10 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-warning\">\n",
-    "**This notebook contains advanced exercises that are only applicable to students who wish to deepen their understanding and qualify for bonus marks on this course.** You will be able to achieve 100% for this notebook by successfully completing exercises 1, and 2. An optional, additional exercise can be completed to qualify for bonus marks.\n",
+    "\n",
+    "**This notebook contains advanced exercises that are only applicable to students who wish to deepen their understanding and qualify for bonus marks on this course.** \n",
+    "\n",
+    "You will be able to achieve 100% for this notebook by successfully completing exercises 1, and 2. An optional, additional exercise can be completed to qualify for bonus marks.\n",
     "</div>"
    ]
   },
@@ -47,8 +50,8 @@
     "- Interpret data using your own behaviors and patterns.\n",
     " \n",
     "####  List of exercises\n",
-    ">   - **Exercise 1**: Using Pandas' ``\"describe\"()`` and ``\"info()\"`` methods to review data..\n",
-    "  - **Exercise 2 **: Access point identification.\n",
+    ">   - **Exercise 1**: Using Pandas' ``\"describe\"()`` and ``\"info()\"`` methods to review data.\n",
+    "  - **Exercise 2**: Access point identification.\n",
     "  - **Exercise 3 [Advanced]**: Trending access point information."
    ]
   },
@@ -487,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
