--- a/module_4/M4_NB1_NetworkX_Introduction.ipynb
+++ b/module_4/M4_NB1_NetworkX_Introduction.ipynb
@@ -33,11 +33,10 @@
    "source": [
     "#### Notebook objectives\n",
     "By the end of this notebook, you will be expected to:\n",
-    "> \n",
-    "  - Create basic graphs using **NetworkX**;\n",
-    "  - Use **graph generators** to explore classic graphs;\n",
-    "  - Visualize graph objects; and\n",
-    "  - Compute neighborhood information from a NetworkX graph object.\n",
+    "> - Create basic graphs using **NetworkX**;\n",
+    "- Use **graph generators** to explore classic graphs;\n",
+    "- Visualize graph objects; and\n",
+    "- Compute neighborhood information from a NetworkX graph object.\n",
     "  \n",
     "####  List of exercises\n",
     "> **Exercise 1**: Create and manipulate NetworkX graphs."
@@ -361,9 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 1.2 Examining the `Graph()` object"
    ]
@@ -619,7 +616,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-danger\">\n",
-    "**Important**: Removing a node not in the graph raises an error.\n",
+    "<b>Important</b>: Removing a node not in the graph raises an error.\n",
     "</div>"
    ]
   },
@@ -930,7 +927,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -944,9 +941,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
