--- a/module_4/M4_NB2_PeerNetworkAnalysis.ipynb
+++ b/module_4/M4_NB2_PeerNetworkAnalysis.ipynb
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img\\social_network_analysis.png\", width=350, height=350>"
+    "![Social network analysis](img\\social_network_analysis.png)"
    ]
   },
   {
@@ -127,7 +127,7 @@
     "\n",
     "# Set global parameters for plotting. \n",
     "%matplotlib inline\n",
-    "plt.rcParams['figure.figsize'] = (10, 8)"
+    "plt.rcParams['figure.figsize'] = (12, 8)"
    ]
   },
   {
@@ -831,7 +831,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img\\social_network_analysis_centrality.png\", width=1050, height=450>"
+    "![Social network analysis centrality](img\\social_network_analysis_centrality.png)"
    ]
   },
   {
@@ -1121,9 +1121,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "Based on the above examples, you should now have a sense that the centrality metrics are similar regarding how they rank important nodes, since a limited number of nodes are common across different metrics. However, they also differ because they do not always return the same nodes. In this section, analysis tools, which assist in comparing these metrics, are provided. \n",
     "\n",
@@ -1265,9 +1263,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "<br>\n",
     "<div class=\"alert alert-info\">\n",
@@ -1555,9 +1551,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "Your markdown answer. "
    ]
@@ -1614,9 +1608,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "Your markdown answer.\n",
     "\n",
@@ -1821,9 +1813,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
