--- a/module_4/M4_NB3_NetworkClustering.ipynb
+++ b/module_4/M4_NB3_NetworkClustering.ipynb
@@ -407,9 +407,11 @@
    "metadata": {},
    "source": [
     "<br>\n",
+    "\n",
     "<div class=\"alert alert-info\">\n",
     "<b>Exercise 1 End.</b>\n",
     "</div>\n",
+    "\n",
     "> **Exercise complete**:"
    ]
   },
@@ -454,11 +456,12 @@
    "metadata": {},
    "source": [
     "<br>\n",
+    "\n",
     "<div class=\"alert alert-info\">\n",
     "<b>Exercise 2 [Advanced] End.</b>\n",
     "</div>\n",
-    "> **Exercise complete**:\n",
-    "    \n",
+    "\n",
+    "> **Exercise complete**:    \n",
     "> This is a good time to \"Save and Checkpoint\"."
    ]
   },
@@ -479,9 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "The Louvain method is one of the most widely-used methods for detecting communities in large networks. It was developed by a team of researchers at the Université catholique de Louvain. The method can unveil hierarchies of communities, and allows you to zoom within communities in order to discover sub-communities, sub-sub-communities, and so forth. The modularity QQ quantifies how good a \"community\" or partition is, and is defined as follows:\n",
     "\n",
@@ -517,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img\\spectral_graph_part.png\", width=750, height=550>"
+    "![Spectral graph](img\\spectral_graph_part.png)"
    ]
   },
   {
@@ -561,9 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "<br>\n",
     "<div class=\"alert alert-info\">\n",
@@ -589,11 +588,12 @@
    "metadata": {},
    "source": [
     "<br>\n",
+    "\n",
     "<div class=\"alert alert-info\">\n",
     "<b>Exercise 3 [Advanced] End.</b>\n",
     "</div>\n",
-    "> **Exercise complete**:\n",
-    "    \n",
+    "\n",
+    "> **Exercise complete**:  \n",
     "> This is a good time to \"Save and Checkpoint\"."
    ]
   },
@@ -627,9 +627,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
