--- a/module_5/M5_NB2_BandicootMachineLearning.ipynb
+++ b/module_5/M5_NB2_BandicootMachineLearning.ipynb
@@ -128,26 +128,19 @@
     "\n",
     "> It takes surprisingly long time to grok bias and variance deeply, but people that understand bias and variance deeply are often able to drive very rapid progress. \n",
     "<br> <br>\n",
-    "<div align=\"right\"> (Andrew Ng, * Tutorial - Nuts and Bolts of Building Applications using Deep Learning, NIPS 2016.*) </div>\n",
+    "<div align=\"right\"> (Andrew Ng, Tutorial - Nuts and Bolts of Building Applications using Deep Learning, NIPS 2016.) </div>\n",
     "\n",
     "The interplay between bias and variance can be visualized using a [bulls-eye diagram](http://scott.fortmann-roe.com/docs/BiasVariance.html). In this representation, the bull's eye at the center of the target is the ground truth, and any deviation from this is an incorrect prediction (model error). Multiple models are built (using different samples from the training data), and the resulting performance of each model is represented by a hit on the board. The scatter in the hits arises from the random variability in the training data (introduced via the resampling). In the plot below are four cases representing different bias and variance combinations that you can expect when fitting models data. Since the truth is not known, various methods such as the learning curve are used to estimate bias in data, and its interplay with variance (Fortmann-Roe 2012).\n",
     "\n",
-    "\n",
-    "\n",
     "You are encouraged to visit and read Scikit-learn’s [practical advice on machine learning](https://ogrisel.github.io/scikit-learn.org/sklearn-tutorial/tutorial/astronomy/practical.html), with special regard to the summary section.\n",
     "\n",
-    "\n",
-    "<img src=\"biasvariance.png\", width=400, height=450>\n",
-    "\n",
-    "\n",
+    "![biasvariance](biasvariance.png \"Screenshot of biasvariance.\")\n",
     "\n",
     "In summary, predictive model-building, with machine learning, involves the following sequential steps:\n",
     "1. Data collection (predictors and response)\n",
     "2. Algorithm selection\n",
     "3. Model selection\n",
     "4. Model evaluation\n",
-    "\n",
-    "\n",
     "\n",
     "### 1.4 Myths and misconceptions\n",
     "Pedro Domingo, author of [*The Master Algorithm*](https://www.amazon.com/Master-Algorithm-Ultimate-Learning-Machine/dp/0465065708), penned an insightful article on a number of machine learning [myths and misconceptions](https://medium.com/@pedromdd/ten-myths-about-machine-learning-d888b48334a3#.143f0x8gq) that are worth reading to get a sense of what machine learning really is.\n",
@@ -1183,6 +1176,7 @@
    "outputs": [],
    "source": [
     "# Plot the results.\n",
+    "plt.rcParams['figure.figsize'] = (20, 12) \n",
     "colors = ['b', 'g', 'r','c','m','k','y']\n",
     "classifiers = ['svm','random_forest', 'logistic regression', 'decision tree', 'mlp_gd', 'mlp_sgd']\n",
     "_ = plt.figure(figsize=(20,10))\n",
@@ -1291,9 +1285,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 4. Submit your notebook\n",
     "\n",
@@ -1305,9 +1297,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 5. References\n",
     "Blumenstock, Joshua, Gabriel Cadamuro, and Robert On. 2015. “Predicting poverty and wealth from mobile phone metadata.” Science 350: 1073-1076.\n",
@@ -1338,7 +1328,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1352,7 +1342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   },
   "toc": {
    "toc_cell": false,
@@ -1362,5 +1352,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
