--- a/module_6/M6_NB1_Projects.ipynb
+++ b/module_6/M6_NB1_Projects.ipynb
@@ -28,7 +28,7 @@
     " \n",
     "####  List of exercises:\n",
     "> - **Exercise 1:** List advantages of multimodal approaches.\n",
-    "- **Exercise 2: ** Identify various data categories and the information they reveal about individual behavior.\n",
+    "- **Exercise 2:** Identify various data categories and the information they reveal about individual behavior.\n",
     "- **Exercise 3:** Identify a social analytics use case based on recent technological innovations.\n",
     "- **Exercise 4:** List problems that may arise in managing large analytical projects, and suggest corrective actions. "
    ]
@@ -478,7 +478,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -492,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   },
   "nbpresent": {
    "slides": {
