--- a/module_7/M7_NB2_Application_Social_Analytics.ipynb
+++ b/module_7/M7_NB2_Application_Social_Analytics.ipynb
@@ -132,6 +132,7 @@
     "\n",
     "\n",
     "<br>\n",
+    "\n",
     "**Additional resources on GFT program**\n",
     "> 1. \"Detecting influenza epidemics using search engine query data\", Jeremy Ginsberg, Matthew H. Mohebbi1, Rajan S. Patel, Lynnette Brammer, Mark S. Smolinski and Larry Brilliant (2009), *Nature*,  vol. 457, 1012-1014.  Preprint available [here](https://static.googleusercontent.com/media/research.google.com/en//archive/papers/detecting-influenza-epidemics.pdf).\n",
     "> 1. [In Defense of Google Flu Trends](http://www.theatlantic.com/technology/archive/2014/03/in-defense-of-google-flu-trends/359688/), Alexis C. Madrigal, *The Atlantic*, March 2014.\n",
@@ -161,6 +162,7 @@
     "<br>\n",
     "<div class=\"alert alert-warning\">\n",
     "<b>Note</b>: Advanced students who wish to gain a better understanding of how clustering models can be used to study the transmission of contagions can refer to an article by Michael Small and C. K. Tse (2005) on [clustering models for the transmission of the SARS virus](http://cktse.eie.polyu.edu.hk/pdf-paper/PhysicaA-0503.pdf).\n",
+    "\n",
     "</div>"
    ]
   },
@@ -302,9 +304,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -316,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
